- Remove bootstrap-switch, which is blocking webpack

--- a/tools/webpack/plugins/plugins.scss
+++ b/tools/webpack/plugins/plugins.scss
@@ -45,7 +45,7 @@
 @import "~bootstrap-select/dist/css/bootstrap-select.css";
 
 // Bootstrap Switch - Bootstrap switch/toggle is a simple component used for activating one of two predefined options: https://mdbootstrap.com/docs/jquery/forms/switch/
-@import "~bootstrap-switch/dist/css/bootstrap3/bootstrap-switch.css";
+//@import "~bootstrap-switch/dist/css/bootstrap3/bootstrap-switch.css";
 
 // select2 - Select2 is a jQuery based replacement for select boxes: https://select2.org/
 @import "~select2/dist/css/select2.css";
