--- a/demo11/src/sass/style.scss
+++ b/demo11/src/sass/style.scss
@@ -88,7 +88,7 @@
     "vendors/plugins/bootstrap-notify",
     "vendors/plugins/bootstrap-select",
     "vendors/plugins/bootstrap-session-timeout",
-    "vendors/plugins/bootstrap-switch",
+    //"vendors/plugins/bootstrap-switch",
     "vendors/plugins/bootstrap-timepicker",
     "vendors/plugins/bootstrap-touchspin",
     "vendors/plugins/ckeditor",
