- Setup passport middleware & related router - Setup rate limiter middleware

--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -14,7 +14,7 @@ License: You must have a valid license purchased only from themeforest(the above
 <html lang="ko">
 <!--begin::Head-->
 <head>
-  <base href="">
+  <base href="/">
   <meta charset="utf-8"/>
   <title>Metronic | Dashboard</title>
   <meta name="description" content="Updates and statistics"/>
