- Update Metronic to v7.0.8

--- a/demo11/src/sass/style.scss
+++ b/demo11/src/sass/style.scss
@@ -67,6 +67,7 @@
     "components/timeline-3",
     "components/timeline-4",
     "components/timeline-5",
+    "components/timeline-6",
     "components/overlay",
     "components/demo",
     "components/wave",
@@ -88,7 +89,7 @@
     "vendors/plugins/bootstrap-notify",
     "vendors/plugins/bootstrap-select",
     "vendors/plugins/bootstrap-session-timeout",
-    //"vendors/plugins/bootstrap-switch",
+    "vendors/plugins/bootstrap-switch",
     "vendors/plugins/bootstrap-timepicker",
     "vendors/plugins/bootstrap-touchspin",
     "vendors/plugins/ckeditor",
