--- a/demo5/src/sass/layout/_variables.scss
+++ b/demo5/src/sass/layout/_variables.scss
@@ -35,7 +35,8 @@ $header-config: (
 	desktop: (
 		// Default Mode
 		default: (
-			height: 80px,
+			//height: 80px,
+			height: 60px,
 			bg-color: $white,
 			border: 1px solid $gray-200
 		),
@@ -43,7 +44,8 @@ $header-config: (
 		// Fixed Mode
 		fixed: (
 			zindex: 97,
-			height: 80px,
+			//height: 80px,
+			height: 60px,
 			transition: all 0.3s ease
 		)
 	),
