--- a/views/index.html
+++ b/views/index.html
@@ -1,34 +1,36 @@
 
 <!--begin::Main-->
 
-		<!--[html-partial:include:{"file":"partials/_header-mobile.html"}]/-->{{> _header-mobile}}
-		<div class="d-flex flex-column flex-root">
+<!--[html-partial:include:{"file":"partials/_header-mobile.html"}]/-->{{> _header-mobile}}
+<div class="d-flex flex-column flex-root">
 
-			<!--begin::Page-->
-			<div class="d-flex flex-row flex-column-fluid page">
+  <!--begin::Page-->
+  <div class="d-flex flex-row flex-column-fluid page">
 
-				<!--[html-partial:include:{"file":"partials/_aside.html"}]/-->{{> _aside}}
+    <!--[html-partial:include:{"file":"partials/_aside.html"}]/-->{{> _aside}}
 
-				<!--begin::Wrapper-->
-				<div class="d-flex flex-column flex-row-fluid wrapper" id="kt_wrapper">
+    <!--begin::Wrapper-->
+    <div class="d-flex flex-column flex-row-fluid wrapper" id="kt_wrapper">
 
-					<!--[html-partial:include:{"file":"partials/_header.html"}]/-->{{> _header}}
+      <!--[html-partial:include:{"file":"partials/_header.html"}]/-->{{> _header}}
 
-					<!--begin::Content-->
-					<div class="content d-flex flex-column flex-column-fluid" id="kt_content">
+      <!--begin::Content-->
+      <div class="content d-flex flex-column flex-column-fluid" id="kt_content">
 
-						<!--[html-partial:include:{"file":"partials/_content.html"}]/-->{{> _content}}
-					</div>
+        <!--[html-partial:include:{"file":"partials/_subheader/subheader-v6.html"}]/-->
 
-					<!--end::Content-->
+        <!--[html-partial:include:{"file":"partials/_content.html"}]/-->{{> _content}}
+      </div>
 
-					<!--[html-partial:include:{"file":"partials/_footer.html"}]/-->
-				</div>
+      <!--end::Content-->
 
-				<!--end::Wrapper-->
-			</div>
+      <!--[html-partial:include:{"file":"partials/_footer.html"}]/-->{{> _footer}}
+    </div>
 
-			<!--end::Page-->
-		</div>
+    <!--end::Wrapper-->
+  </div>
 
-		<!--end::Main-->
+  <!--end::Page-->
+</div>
+
+<!--end::Main-->
