--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -14,142 +14,144 @@ License: You must have a valid license purchased only from themeforest(the above
 -->
 <html lang="ko">
 
-	<!--begin::Head-->
-	<head>
-		<base href="/">
-		<meta charset="utf-8" />
-		<title>Metronic Live preview | Keenthemes</title>
-		<meta name="description" content="Updates and statistics" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+<!--begin::Head-->
+<head>
+  <base href="/">
+  <meta charset="utf-8" />
+  <title>Metronic Live preview | Keenthemes</title>
+  <meta name="description" content="Updates and statistics" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <link rel="canonical" href="https://keenthemes.com/metronic" />
 
-		<!--begin::Fonts-->
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" />
+  <!--begin::Fonts-->
+  <link href="https://cdn.rawgit.com/innks/NanumSquareRound/master/nanumsquareround.css" rel="stylesheet" type="text/css">
+  <!--end::Fonts-->
 
-		<!--end::Fonts-->
+  <!--begin::Page Vendors Styles(used by this page)-->
 
-		<!--begin::Page Vendors Styles(used by this page)-->
+  <!--end::Page Vendors Styles-->
 
-		<!--end::Page Vendors Styles-->
+  <!--begin::Global Theme Styles(used by all pages)-->
+  <link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
+  <link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
+  <link href="assets/css/style.custom.bundle.css" rel="stylesheet" type="text/css" />
 
-		<!--begin::Global Theme Styles(used by all pages)-->
-		<link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
-		<link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
+  <!--end::Global Theme Styles-->
 
-		<!--end::Global Theme Styles-->
+  <!--begin::Layout Themes(used by all pages)-->
 
-		<!--begin::Layout Themes(used by all pages)-->
+  <!--end::Layout Themes-->
+  <link rel="shortcut icon" href="assets/media/logos/favicon.ico" />
+</head>
 
-		<!--end::Layout Themes-->
-		<link rel="shortcut icon" href="assets/media/logos/favicon.ico" />
-	</head>
+<!--end::Head-->
 
-	<!--end::Head-->
+<!--begin::Body-->
+<body id="kt_body" class="page-loading-enabled page-loading quick-panel-right demo-panel-right offcanvas-right header-fixed header-mobile-fixed subheader-enabled aside-enabled aside-static page-loading">
 
-	<!--begin::Body-->
-	<body id="kt_body" class="page-loading-enabled page-loading quick-panel-right demo-panel-right offcanvas-right header-fixed header-mobile-fixed aside-enabled aside-static page-loading">
+<!--[html-partial:include:{"file":"partials/_page-loader.html"}]/-->{{> _page-loader}}
 
-		<!--[html-partial:include:{"file":"partials/_page-loader.html"}]/-->{{> _page-loader}}
+<!--[html-partial:include:{"file":"layout.html"}]/-->{{{body}}}
 
-		<!--[html-partial:include:{"file":"layout.html"}]/-->{{{body}}}
+<!--[html-partial:include:{"file":"partials/_extras/offcanvas/quick-notifications.html"}]/-->{{> _extras/offcanvas/quick-notifications}}
 
-		<!--[html-partial:include:{"file":"partials/_extras/offcanvas/quick-notifications.html"}]/-->{{> _extras/offcanvas/quick-notifications}}
+<!--[html-partial:include:{"file":"partials/_extras/offcanvas/quick-actions.html"}]/-->{{> _extras/offcanvas/quick-actions}}
 
-		<!--[html-partial:include:{"file":"partials/_extras/offcanvas/quick-actions.html"}]/-->{{> _extras/offcanvas/quick-actions}}
+<!--[html-partial:include:{"file":"partials/_extras/offcanvas/quick-user.html"}]/-->{{> _extras/offcanvas/quick-user}}
 
-		<!--[html-partial:include:{"file":"partials/_extras/offcanvas/quick-user.html"}]/-->{{> _extras/offcanvas/quick-user}}
+<!--[html-partial:include:{"file":"partials/_extras/offcanvas/quick-panel.html"}]/-->{{> _extras/offcanvas/quick-panel}}
 
-		<!--[html-partial:include:{"file":"partials/_extras/offcanvas/quick-panel.html"}]/-->{{> _extras/offcanvas/quick-panel}}
+<!--[html-partial:include:{"file":"partials/_extras/chat.html"}]/-->{{> _extras/chat}}
 
-		<!--[html-partial:include:{"file":"partials/_extras/chat.html"}]/-->{{> _extras/chat}}
+<!--[html-partial:include:{"file":"partials/_extras/scrolltop.html"}]/-->{{> _extras/scrolltop}}
 
-		<!--[html-partial:include:{"file":"partials/_extras/scrolltop.html"}]/-->
+<!--[html-partial:include:{"file":"partials/_extras/toolbar.html"}]/-->{{> _extras/toolbar}}
 
-		<!--[html-partial:include:{"file":"partials/_extras/toolbar.html"}]/-->{{> _extras/toolbar}}
+<!--[html-partial:include:{"file":"partials/_extras/offcanvas/demo-panel.html"}]/-->
+<script>
+  var HOST_URL = "https://preview.keenthemes.com/metronic/theme/html/tools/preview";
+</script>
 
-		<!--[html-partial:include:{"file":"partials/_extras/offcanvas/demo-panel.html"}]/-->
-		<script>
-			var HOST_URL = "https://preview.keenthemes.com/metronic/theme/html/tools/preview";
-		</script>
+<!--begin::Global Config(global config for global JS scripts)-->
+<script>
+  var KTAppSettings = {
+    "breakpoints": {
+      "sm": 576,
+      "md": 768,
+      "lg": 992,
+      "xl": 1200,
+      "xxl": 1200
+    },
+    "colors": {
+      "theme": {
+        "base": {
+          "white": "#ffffff",
+          "primary": "#6993FF",
+          "secondary": "#E5EAEE",
+          "success": "#1BC5BD",
+          "info": "#8950FC",
+          "warning": "#FFA800",
+          "danger": "#F64E60",
+          "light": "#F3F6F9",
+          "dark": "#212121"
+        },
+        "light": {
+          "white": "#ffffff",
+          "primary": "#E1E9FF",
+          "secondary": "#ECF0F3",
+          "success": "#C9F7F5",
+          "info": "#EEE5FF",
+          "warning": "#FFF4DE",
+          "danger": "#FFE2E5",
+          "light": "#F3F6F9",
+          "dark": "#D6D6E0"
+        },
+        "inverse": {
+          "white": "#ffffff",
+          "primary": "#ffffff",
+          "secondary": "#212121",
+          "success": "#ffffff",
+          "info": "#ffffff",
+          "warning": "#ffffff",
+          "danger": "#ffffff",
+          "light": "#464E5F",
+          "dark": "#ffffff"
+        }
+      },
+      "gray": {
+        "gray-100": "#F3F6F9",
+        "gray-200": "#ECF0F3",
+        "gray-300": "#E5EAEE",
+        "gray-400": "#D6D6E0",
+        "gray-500": "#B5B5C3",
+        "gray-600": "#80808F",
+        "gray-700": "#464E5F",
+        "gray-800": "#1B283F",
+        "gray-900": "#212121"
+      }
+    },
+    "font-family": "NanumSquareRound"
+  };
+</script>
 
-		<!--begin::Global Config(global config for global JS scripts)-->
-		<script>
-			var KTAppSettings = {
-				"breakpoints": {
-					"sm": 576,
-					"md": 768,
-					"lg": 992,
-					"xl": 1200,
-					"xxl": 1200
-				},
-				"colors": {
-					"theme": {
-						"base": {
-							"white": "#ffffff",
-							"primary": "#6993FF",
-							"secondary": "#E5EAEE",
-							"success": "#1BC5BD",
-							"info": "#8950FC",
-							"warning": "#FFA800",
-							"danger": "#F64E60",
-							"light": "#F3F6F9",
-							"dark": "#212121"
-						},
-						"light": {
-							"white": "#ffffff",
-							"primary": "#E1E9FF",
-							"secondary": "#ECF0F3",
-							"success": "#C9F7F5",
-							"info": "#EEE5FF",
-							"warning": "#FFF4DE",
-							"danger": "#FFE2E5",
-							"light": "#F3F6F9",
-							"dark": "#D6D6E0"
-						},
-						"inverse": {
-							"white": "#ffffff",
-							"primary": "#ffffff",
-							"secondary": "#212121",
-							"success": "#ffffff",
-							"info": "#ffffff",
-							"warning": "#ffffff",
-							"danger": "#ffffff",
-							"light": "#464E5F",
-							"dark": "#ffffff"
-						}
-					},
-					"gray": {
-						"gray-100": "#F3F6F9",
-						"gray-200": "#ECF0F3",
-						"gray-300": "#E5EAEE",
-						"gray-400": "#D6D6E0",
-						"gray-500": "#B5B5C3",
-						"gray-600": "#80808F",
-						"gray-700": "#464E5F",
-						"gray-800": "#1B283F",
-						"gray-900": "#212121"
-					}
-				},
-				"font-family": "Poppins"
-			};
-		</script>
+<!--end::Global Config-->
 
-		<!--end::Global Config-->
+<!--begin::Global Theme Bundle(used by all pages)-->
+<script src="assets/plugins/global/plugins.bundle.js"></script>
+<script src="assets/js/scripts.bundle.js"></script>
 
-		<!--begin::Global Theme Bundle(used by all pages)-->
-		<script src="assets/plugins/global/plugins.bundle.js"></script>
-		<script src="assets/js/scripts.bundle.js"></script>
+<!--end::Global Theme Bundle-->
 
-		<!--end::Global Theme Bundle-->
+<!--begin::Page Vendors(used by this page)-->
+<script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=162a033764cd83534e05d07b405f4580&libraries=services" type="text/javascript"></script>
+<script src="assets/plugins/custom/datatables/datatables.bundle.js"></script>
+<!--end::Page Vendors-->
 
-		<!--begin::Page Vendors(used by this page)-->
+<!--begin::Page Scripts(used by this page)-->
+<script src="assets/js/pages/widgets.js"></script>
+<script defer src="assets/js/maps.bundle.js" type="text/javascript"></script>
+<!--end::Page Scripts-->
+</body>
 
-		<!--end::Page Vendors-->
-
-		<!--begin::Page Scripts(used by this page)-->
-		<script src="assets/js/pages/widgets.js"></script>
-
-		<!--end::Page Scripts-->
-	</body>
-
-	<!--end::Body-->
+<!--end::Body-->
 </html>
