--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -149,6 +149,9 @@ License: You must have a valid license purchased only from themeforest(the above
 
 <!--begin::Page Scripts(used by this page)-->
 <script src="assets/js/pages/widgets.js"></script>
+<script src="assets/js/pages/crud/forms/widgets/bootstrap-datetimepicker.js"></script>
+<script src="assets/js/pages/crud/forms/widgets/input-mask.js"></script>
+<script src="assets/js/pages/crud/datatables/search-options/advanced-search.js"></script>
 <script defer src="assets/js/maps.bundle.js" type="text/javascript"></script>
 <!--end::Page Scripts-->
 </body>
