--- a/views/petition-register.html
+++ b/views/petition-register.html
@@ -1,7 +1,14 @@
+<!--begin::Body-->
+
+<body id="kt_body"
+      class="page-loading-enabled page-loading quick-panel-right demo-panel-right offcanvas-right header-fixed header-mobile-fixed subheader-enabled aside-enabled aside-static page-loading">
+
+<!--[html-partial:include:{"file":"partials/_page-loader.html"}]/-->{{> _page-loader}}
 
 <!--begin::Main-->
 
 <!--[html-partial:include:{"file":"partials/_header-mobile.html"}]/-->{{> _header-mobile}}
+
 <div class="d-flex flex-column flex-root">
 
   <!--begin::Page-->
@@ -34,3 +41,108 @@
 </div>
 
 <!--end::Main-->
+
+<!--[html-partial:include:{"file":"partials/_extras/offcanvas/quick-notifications.html"}]/-->{{> _extras/offcanvas/quick-notifications}}
+
+<!--[html-partial:include:{"file":"partials/_extras/offcanvas/quick-actions.html"}]/-->{{> _extras/offcanvas/quick-actions}}
+
+<!--[html-partial:include:{"file":"partials/_extras/offcanvas/quick-user.html"}]/-->{{> _extras/offcanvas/quick-user}}
+
+<!--[html-partial:include:{"file":"partials/_extras/offcanvas/quick-panel.html"}]/-->{{> _extras/offcanvas/quick-panel}}
+
+<!--[html-partial:include:{"file":"partials/_extras/chat.html"}]/-->{{> _extras/chat}}
+
+<!--[html-partial:include:{"file":"partials/_extras/scrolltop.html"}]/-->{{> _extras/scrolltop}}
+
+<!--[html-partial:include:{"file":"partials/_extras/toolbar.html"}]/-->{{> _extras/toolbar}}
+
+<!--[html-partial:include:{"file":"partials/_extras/offcanvas/demo-panel.html"}]/-->
+<script>
+  var HOST_URL = 'https://preview.keenthemes.com/metronic/theme/html/tools/preview';
+</script>
+
+<!--begin::Global Config(global config for global JS scripts)-->
+<script>
+  var KTAppSettings = {
+    'breakpoints': {
+      'sm': 576,
+      'md': 768,
+      'lg': 992,
+      'xl': 1200,
+      'xxl': 1200,
+    },
+    'colors': {
+      'theme': {
+        'base': {
+          'white': '#ffffff',
+          'primary': '#6993FF',
+          'secondary': '#E5EAEE',
+          'success': '#1BC5BD',
+          'info': '#8950FC',
+          'warning': '#FFA800',
+          'danger': '#F64E60',
+          'light': '#F3F6F9',
+          'dark': '#212121',
+        },
+        'light': {
+          'white': '#ffffff',
+          'primary': '#E1E9FF',
+          'secondary': '#ECF0F3',
+          'success': '#C9F7F5',
+          'info': '#EEE5FF',
+          'warning': '#FFF4DE',
+          'danger': '#FFE2E5',
+          'light': '#F3F6F9',
+          'dark': '#D6D6E0',
+        },
+        'inverse': {
+          'white': '#ffffff',
+          'primary': '#ffffff',
+          'secondary': '#212121',
+          'success': '#ffffff',
+          'info': '#ffffff',
+          'warning': '#ffffff',
+          'danger': '#ffffff',
+          'light': '#464E5F',
+          'dark': '#ffffff',
+        },
+      },
+      'gray': {
+        'gray-100': '#F3F6F9',
+        'gray-200': '#ECF0F3',
+        'gray-300': '#E5EAEE',
+        'gray-400': '#D6D6E0',
+        'gray-500': '#B5B5C3',
+        'gray-600': '#80808F',
+        'gray-700': '#464E5F',
+        'gray-800': '#1B283F',
+        'gray-900': '#212121',
+      },
+    },
+    'font-family': 'NanumSquareRound',
+  };
+</script>
+
+<!--end::Global Config-->
+
+<!--begin::Global Theme Bundle(used by all pages)-->
+<script src="assets/plugins/global/plugins.bundle.js"></script>
+<script src="assets/plugins/custom/prismjs/prismjs.bundle.js"></script>
+<script src="assets/js/scripts.bundle.js"></script>
+
+<!--end::Global Theme Bundle-->
+
+<!--begin::Page Vendors(used by this page)-->
+<script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=162a033764cd83534e05d07b405f4580&libraries=services"
+        type="text/javascript"></script>
+<!--end::Page Vendors-->
+
+<!--begin::Page Scripts(used by this page)-->
+<script src="assets/js/pages/widgets.js"></script>
+<script src="assets/js/pages/crud/forms/widgets/bootstrap-datetimepicker.js"></script>
+<script src="assets/js/pages/crud/forms/widgets/input-mask.js"></script>
+<script defer src="assets/js/maps.bundle.js" type="text/javascript"></script>
+<!--end::Page Scripts-->
+</body>
+
+<!--end::Body-->
