--- a/views/partials/_subheader/_subheader-petition-search.html
+++ b/views/partials/_subheader/_subheader-petition-search.html
@@ -1,6 +1,6 @@
 <!--begin::Subheader-->
 <div class="subheader py-3 py-lg-4 subheader-transparent" id="kt_subheader">
-  <div class="container-fluid d-flex align-items-center justify-content-between flex-wrap flex-sm-nowrap">
+  <div class="container d-flex align-items-center justify-content-between flex-wrap flex-sm-nowrap">
 
     <!--begin::Info-->
     <div class="d-flex align-items-center flex-wrap mr-1">
