--- a/views/petition-register.html
+++ b/views/petition-register.html
@@ -54,7 +54,7 @@
 
 <!--[html-partial:include:{"file":"partials/_extras/scrolltop.html"}]/-->{{> _extras/scrolltop}}
 
-<!--[html-partial:include:{"file":"partials/_extras/toolbar.html"}]/-->{{> _extras/toolbar}}
+<!--[html-partial:include:{"file":"partials/_extras/toolbar.html"}]/-->
 
 <!--[html-partial:include:{"file":"partials/_extras/offcanvas/demo-panel.html"}]/-->
 <script>
@@ -119,7 +119,7 @@
         'gray-900': '#212121',
       },
     },
-    'font-family': 'NanumSquareRound',
+    'font-family': 'Spoqa Han Sans',
   };
 </script>
 
