--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -17,14 +17,14 @@ License: You must have a valid license purchased only from themeforest(the above
 <!--begin::Head-->
 <head>
   <base href="/">
-  <meta charset="utf-8" />
+  <meta charset="utf-8"/>
   <title>{{title}}</title>
-  <meta name="description" content="" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="csrf-token" content="{{_csrfToken}}" />
+  <meta name="description" content=""/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+  <meta name="csrf-token" content="{{_csrfToken}}"/>
 
   <!--begin::Fonts-->
-  <link href="https://cdn.rawgit.com/innks/NanumSquareRound/master/nanumsquareround.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
   <!--end::Fonts-->
 
   <!--begin::Page Vendors Styles(used by this page)-->
@@ -32,17 +32,17 @@ License: You must have a valid license purchased only from themeforest(the above
   <!--end::Page Vendors Styles-->
 
   <!--begin::Global Theme Styles(used by all pages)-->
-  <link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
-  <link href="assets/plugins/custom/prismjs/prismjs.bundle.css" rel="stylesheet" type="text/css" />
-  <link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
-  <link href="assets/css/style.custom.bundle.css" rel="stylesheet" type="text/css" />
+  <link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css"/>
+  <link href="assets/plugins/custom/prismjs/prismjs.bundle.css" rel="stylesheet" type="text/css"/>
+  <link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css"/>
+  <link href="assets/css/style.custom.bundle.css" rel="stylesheet" type="text/css"/>
 
   <!--end::Global Theme Styles-->
 
   <!--begin::Layout Themes(used by all pages)-->
 
   <!--end::Layout Themes-->
-  <link rel="shortcut icon" href="assets/media/logos/favicon.ico" />
+  <link rel="shortcut icon" href="assets/media/logos/favicon.ico"/>
 </head>
 
 {{{body}}}
