--- a/views/petition-search.html
+++ b/views/petition-search.html
@@ -54,7 +54,7 @@
 
 <!--[html-partial:include:{"file":"partials/_extras/scrolltop.html"}]/-->{{> _extras/scrolltop}}
 
-<!--[html-partial:include:{"file":"partials/_extras/toolbar.html"}]/-->{{> _extras/toolbar}}
+<!--[html-partial:include:{"file":"partials/_extras/toolbar.html"}]/-->
 
 <!--[html-partial:include:{"file":"partials/_extras/offcanvas/demo-panel.html"}]/-->
 <script>
@@ -119,7 +119,7 @@
         'gray-900': '#212121',
       },
     },
-    'font-family': 'NanumSquareRound',
+    'font-family': 'Spoqa Han Sans',
   };
 </script>
 
@@ -139,6 +139,7 @@
 <!--begin::Page Scripts(used by this page)-->
 <script src="assets/js/pages/widgets.js"></script>
 <script src="assets/js/pages/crud/datatables/search-options/advanced-search.js"></script>
+<!--<script src="assets/js/pages/crud/datatables/extensions/buttons.js"></script>-->
 <!--end::Page Scripts-->
 </body>
 
