--- a/demo5/src/sass/components/_variables.bootstrap.scss
+++ b/demo5/src/sass/components/_variables.bootstrap.scss
@@ -379,7 +379,7 @@ $body-color:                						$dark-75 !default;
 
 // Font family
 //$font-family-base:            						Poppins, Helvetica, "sans-serif" !default;
-$font-family-base:            						'Noto Sans KR', "sans-serif" !default;
+$font-family-base:            						'Nanum Gothic', "sans-serif" !default;
 
 $font-size-base:              						1rem !default; // Assumes the browser default, typically `13px`
 $font-size-lg:               	 					$font-size-base * 1.08 !default;   // 14.04px
@@ -567,7 +567,7 @@ $table-compact-head-letter-spacing:                 0.1rem !default; // Custom v
 
 // Card
 $card-box-shadow: 									0px 0px 30px 0px rgba(82,63,105,0.05) !default; // card custom shadow
-$card-border-color:                 				$gray-200 !default;
+$card-border-color:                 				$gray-300 !default;
 $card-cap-bg:                       				$white !default;
 $card-spacer-y:                     				1rem !default;
 $card-spacer-x:                    					2rem !default;
