--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,14 @@
+<!--begin::Body-->
+
+<body id="kt_body"
+      class="page-loading-enabled page-loading quick-panel-right demo-panel-right offcanvas-right header-fixed header-mobile-fixed subheader-enabled aside-enabled aside-static page-loading">
+
+<!--[html-partial:include:{"file":"partials/_page-loader.html"}]/-->{{> _page-loader}}
 
 <!--begin::Main-->
 
 <!--[html-partial:include:{"file":"partials/_header-mobile.html"}]/-->{{> _header-mobile}}
+
 <div class="d-flex flex-column flex-root">
 
   <!--begin::Page-->
@@ -15,16 +22,14 @@
       <!--[html-partial:include:{"file":"partials/_header.html"}]/-->{{> _header}}
 
       <!--begin::Content-->
-      <div class="content d-flex flex-column flex-column-fluid" id="kt_content">
 
-        <!--[html-partial:include:{"file":"partials/_subheader/subheader-v6.html"}]/-->
+      <!--[html-partial:include:{"file":"partials/_subheader/subheader-v6.html"}]/-->
 
-        <!--[html-partial:include:{"file":"partials/_content.html"}]/-->{{> _content}}
-      </div>
+      <!--[html-partial:include:{"file":"partials/_content.html"}]/-->{{> _content}}
 
       <!--end::Content-->
 
-      <!--[html-partial:include:{"file":"partials/_footer.html"}]/-->{{> _footer}}
+      <!--[html-partial:include:{"file":"partials/_footer.html"}]/-->
     </div>
 
     <!--end::Wrapper-->
@@ -34,3 +39,120 @@
 </div>
 
 <!--end::Main-->
+
+<!--[html-partial:include:{"file":"partials/_extras/offcanvas/quick-notifications.html"}]/-->
+
+<!--[html-partial:include:{"file":"partials/_extras/offcanvas/quick-actions.html"}]/-->
+
+<!--[html-partial:include:{"file":"partials/_extras/offcanvas/quick-user.html"}]/-->
+
+<!--[html-partial:include:{"file":"partials/_extras/offcanvas/quick-panel.html"}]/-->
+
+<!--[html-partial:include:{"file":"partials/_extras/chat.html"}]/-->{{> _extras/chat}}
+
+<!--[html-partial:include:{"file":"partials/_extras/scrolltop.html"}]/-->{{> _extras/scrolltop}}
+
+<!--[html-partial:include:{"file":"partials/_extras/toolbar.html"}]/-->
+
+<!--[html-partial:include:{"file":"partials/_extras/offcanvas/demo-panel.html"}]/-->
+
+{{> _modal/_duty-schedule}}
+<script>
+  var HOST_URL = 'https://preview.keenthemes.com/metronic/theme/html/tools/preview';
+</script>
+
+<!--begin::Global Config(global config for global JS scripts)-->
+<script>
+  var KTAppSettings = {
+    'breakpoints': {
+      'sm': 576,
+      'md': 768,
+      'lg': 992,
+      'xl': 1200,
+      'xxl': 1200,
+    },
+    'colors': {
+      'theme': {
+        'base': {
+          'white': '#ffffff',
+          'primary': '#6993FF',
+          'secondary': '#E5EAEE',
+          'success': '#1BC5BD',
+          'info': '#8950FC',
+          'warning': '#FFA800',
+          'danger': '#F64E60',
+          'light': '#F3F6F9',
+          'dark': '#212121',
+        },
+        'light': {
+          'white': '#ffffff',
+          'primary': '#E1E9FF',
+          'secondary': '#ECF0F3',
+          'success': '#C9F7F5',
+          'info': '#EEE5FF',
+          'warning': '#FFF4DE',
+          'danger': '#FFE2E5',
+          'light': '#F3F6F9',
+          'dark': '#D6D6E0',
+        },
+        'inverse': {
+          'white': '#ffffff',
+          'primary': '#ffffff',
+          'secondary': '#212121',
+          'success': '#ffffff',
+          'info': '#ffffff',
+          'warning': '#ffffff',
+          'danger': '#ffffff',
+          'light': '#464E5F',
+          'dark': '#ffffff',
+        },
+      },
+      'gray': {
+        'gray-100': '#F3F6F9',
+        'gray-200': '#ECF0F3',
+        'gray-300': '#E5EAEE',
+        'gray-400': '#D6D6E0',
+        'gray-500': '#B5B5C3',
+        'gray-600': '#80808F',
+        'gray-700': '#464E5F',
+        'gray-800': '#1B283F',
+        'gray-900': '#212121',
+      },
+    },
+    'font-family': 'Spoqa Han Sans',
+  };
+</script>
+
+<!--end::Global Config-->
+
+<!--begin::Global Theme Bundle(used by all pages)-->
+<script src="assets/plugins/global/plugins.bundle.js"></script>
+<script src="assets/plugins/custom/prismjs/prismjs.bundle.js"></script>
+<script src="assets/js/scripts.bundle.js"></script>
+
+<!--end::Global Theme Bundle-->
+
+<!--begin::Page Vendors(used by this page)-->
+<script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=162a033764cd83534e05d07b405f4580&libraries=services"
+        type="text/javascript"></script>
+<script src="assets/plugins/custom/datatables/datatables.bundle.js"></script>
+<!--end::Page Vendors-->
+
+<!--begin::Page Scripts(used by this page)-->
+<script src="assets/js/pages/widgets.js"></script>
+<script src="assets/js/pages/crud/datatables/data-sources/ajax-client-side-custom.js"></script>
+<script>
+  var mapContainer = document.getElementById('map-kakao');
+  var mapOption = {
+    center: new kakao.maps.LatLng(36.828536, 128.625697),
+    level: 3,
+  };
+
+  var map = new kakao.maps.Map(mapContainer, mapOption);
+
+  $('.navi-link').removeClass('active');
+</script>
+<!--end::Page Scripts-->
+</body>
+
+<!--end::Body-->
