--- a/views/partials/_content-petition-register.html
+++ b/views/partials/_content-petition-register.html
@@ -13,8 +13,7 @@
       </div>
       <div class="col-md-6">
         <!--begin::Card-->
-        <div class="card card-custom gutter-b example example-compact card-fit card-border card-stretch overlay"
-             id="someHi">
+        <div class="card card-custom gutter-b example example-compact card-fit card-border card-stretch overlay" id="someHi">
           <!--        <div class="card card-custom gutter-b example example-compact card-fit card-border card-stretch overlay overlay-block" id="someHi">-->
           <!--                      <div class="card-header">-->
           <!--                        <h3 class="card-title">3 Columns Form Layout</h3>-->
@@ -132,7 +131,7 @@
               <div class="form-group row">
                 <div class="col-lg-12">
                   <label>상세 내용:</label>
-                  <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
+                  <textarea class="form-control" id="exampleTextarea" rows="6"></textarea>
                 </div>
               </div>
               <div class="separator separator-dashed my-5"></div>
