--- a/views/partials/_header.html
+++ b/views/partials/_header.html
@@ -32,13 +32,13 @@
 
       <!--begin::Logo-->
       <a href="">
-        <img alt="Logo" src="assets/media/logos/logo-yeongju.png" class="logo-sticky max-h-35px"/>
+        <img alt="Logo" src="assets/media/logos/Untitled-2.png" class="logo-sticky max-h-35px"/>
       </a>
 
       <!--end::Logo-->
 
       <!--begin::Desktop Search-->
-      <div class="quick-search quick-search-inline ml-20 w-300px" id="kt_quick_search_inline">
+      <div class="quick-search quick-search-inline ml-15 w-300px" id="kt_quick_search_inline">
 
         <!--begin::Form-->
         <form method="get" class="quick-search-form">
@@ -65,7 +65,7 @@
 													</span>
 												</span>
             </div>
-            <input type="text" class="form-control h-45px" placeholder="검색..."/>
+            <input type="text" class="form-control h-45px quick-search-inline" placeholder="검색어를 입력하세요..."/>
             <div class="input-group-append">
 												<span class="input-group-text">
 													<i class="quick-search-close ki ki-close icon-sm text-muted"></i>
@@ -77,13 +77,13 @@
         <!--end::Form-->
 
         <!--begin::Search Toggle-->
-        <div id="kt_quick_search_toggle" data-toggle="dropdown" data-offset="0px,1px"></div>
+        <div id="kt_quick_search_toggle" data-toggle="dropdown" data-offset="0px,5px"></div>
 
         <!--end::Search Toggle-->
 
         <!--begin::Dropdown-->
         <div class="dropdown-menu dropdown-menu-left dropdown-menu-lg dropdown-menu-anim-up">
-          <div class="quick-search-wrapper scroll" data-scroll="true" data-height="350" data-mobile-height="200"></div>
+          <div class="quick-search-wrapper scroll" data-scroll="true" data-height="500" data-mobile-height="250"></div>
         </div>
 
         <!--end::Dropdown-->
@@ -137,26 +137,26 @@
       <!--end::Tablet & Mobile Search-->
 
       <!--begin::Create-->
-      <div class="topbar-item mr-4">
+      <div class="topbar-item">
 
         <!--begin::Toggle-->
         <button type="button"
-                class="btn font-weight-bolder btn-outline-primary btn-hover-primary dropdown-toggle"
-                id="dropdownMenuOffset" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                class="btn font-weight-bolder btn-text-dark"
+                data-toggle="dropdown" aria-haspopup="false" aria-expanded="false"
                 data-offset="0,5">
-          <span class="svg-icon svg-icon-md"><!--begin::Svg Icon | path:C:\wamp64\www\keenthemes\themes\metronic\theme\html\demo5\dist/../src/media/svg/icons\Communication\Active-call.svg--><svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="24px" height="24px" viewBox="0 0 24 24" version="1.1">
-    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-        <rect x="0" y="0" width="24" height="24"/>
-        <path
-            d="M13.0799676,14.7839934 L15.2839934,12.5799676 C15.8927139,11.9712471 16.0436229,11.0413042 15.6586342,10.2713269 L15.5337539,10.0215663 C15.1487653,9.25158901 15.2996742,8.3216461 15.9083948,7.71292558 L18.6411989,4.98012149 C18.836461,4.78485934 19.1530435,4.78485934 19.3483056,4.98012149 C19.3863063,5.01812215 19.4179321,5.06200062 19.4419658,5.11006808 L20.5459415,7.31801948 C21.3904962,9.0071287 21.0594452,11.0471565 19.7240871,12.3825146 L13.7252616,18.3813401 C12.2717221,19.8348796 10.1217008,20.3424308 8.17157288,19.6923882 L5.75709327,18.8875616 C5.49512161,18.8002377 5.35354162,18.5170777 5.4408655,18.2551061 C5.46541191,18.1814669 5.50676633,18.114554 5.56165376,18.0596666 L8.21292558,15.4083948 C8.8216461,14.7996742 9.75158901,14.6487653 10.5215663,15.0337539 L10.7713269,15.1586342 C11.5413042,15.5436229 12.4712471,15.3927139 13.0799676,14.7839934 Z"
-            fill="#000000"/>
-        <path
-            d="M14.1480759,6.00715131 L13.9566988,7.99797396 C12.4781389,7.8558405 11.0097207,8.36895892 9.93933983,9.43933983 C8.8724631,10.5062166 8.35911588,11.9685602 8.49664195,13.4426352 L6.50528978,13.6284215 C6.31304559,11.5678496 7.03283934,9.51741319 8.52512627,8.02512627 C10.0223249,6.52792766 12.0812426,5.80846733 14.1480759,6.00715131 Z M14.4980938,2.02230302 L14.313049,4.01372424 C11.6618299,3.76737046 9.03000738,4.69181803 7.1109127,6.6109127 C5.19447112,8.52735429 4.26985715,11.1545872 4.51274152,13.802405 L2.52110319,13.985098 C2.22450978,10.7517681 3.35562581,7.53777247 5.69669914,5.19669914 C8.04101739,2.85238089 11.2606138,1.72147333 14.4980938,2.02230302 Z"
-            fill="#000000" fill-rule="nonzero" opacity="0.3"/>
-    </g>
-</svg><!--end::Svg Icon--></span>
+          <!--          <span class="svg-icon svg-icon-md">&lt;!&ndash;begin::Svg Icon | path:C:\wamp64\www\keenthemes\themes\metronic\theme\html\demo5\dist/../src/media/svg/icons\Communication\Active-call.svg&ndash;&gt;<svg-->
+          <!--              xmlns="http://www.w3.org/2000/svg"-->
+          <!--              width="24px" height="24px" viewBox="0 0 24 24" version="1.1">-->
+          <!--    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">-->
+          <!--        <rect x="0" y="0" width="24" height="24"/>-->
+          <!--        <path-->
+          <!--            d="M13.0799676,14.7839934 L15.2839934,12.5799676 C15.8927139,11.9712471 16.0436229,11.0413042 15.6586342,10.2713269 L15.5337539,10.0215663 C15.1487653,9.25158901 15.2996742,8.3216461 15.9083948,7.71292558 L18.6411989,4.98012149 C18.836461,4.78485934 19.1530435,4.78485934 19.3483056,4.98012149 C19.3863063,5.01812215 19.4179321,5.06200062 19.4419658,5.11006808 L20.5459415,7.31801948 C21.3904962,9.0071287 21.0594452,11.0471565 19.7240871,12.3825146 L13.7252616,18.3813401 C12.2717221,19.8348796 10.1217008,20.3424308 8.17157288,19.6923882 L5.75709327,18.8875616 C5.49512161,18.8002377 5.35354162,18.5170777 5.4408655,18.2551061 C5.46541191,18.1814669 5.50676633,18.114554 5.56165376,18.0596666 L8.21292558,15.4083948 C8.8216461,14.7996742 9.75158901,14.6487653 10.5215663,15.0337539 L10.7713269,15.1586342 C11.5413042,15.5436229 12.4712471,15.3927139 13.0799676,14.7839934 Z"-->
+          <!--            fill="#000000"/>-->
+          <!--        <path-->
+          <!--            d="M14.1480759,6.00715131 L13.9566988,7.99797396 C12.4781389,7.8558405 11.0097207,8.36895892 9.93933983,9.43933983 C8.8724631,10.5062166 8.35911588,11.9685602 8.49664195,13.4426352 L6.50528978,13.6284215 C6.31304559,11.5678496 7.03283934,9.51741319 8.52512627,8.02512627 C10.0223249,6.52792766 12.0812426,5.80846733 14.1480759,6.00715131 Z M14.4980938,2.02230302 L14.313049,4.01372424 C11.6618299,3.76737046 9.03000738,4.69181803 7.1109127,6.6109127 C5.19447112,8.52735429 4.26985715,11.1545872 4.51274152,13.802405 L2.52110319,13.985098 C2.22450978,10.7517681 3.35562581,7.53777247 5.69669914,5.19669914 C8.04101739,2.85238089 11.2606138,1.72147333 14.4980938,2.02230302 Z"-->
+          <!--            fill="#000000" fill-rule="nonzero" opacity="0.3"/>-->
+          <!--    </g>-->
+          <!--</svg>&lt;!&ndash;end::Svg Icon&ndash;&gt;</span>-->
           민원 관리
         </button>
 
@@ -166,11 +166,11 @@
         <div class="dropdown-menu p-0 m-0 dropdown-menu-right dropdown-menu-anim-up dropdown-menu-md">
 
           <!--[html-partial:begin:{"id":"demo1/dist/inc/view/partials/content/dropdowns/dropdown-4","page":"index"}]/-->
-
+          <!-- TODO: 구별이 쉽게 선택한 메뉴에 primary color 배경을 적용 -->
           <!--begin::Navigation-->
           <ul class="navi navi-hover navi-active navi-accent py-5">
             <li class="navi-item">
-              <a href="/register" class="navi-link active">
+              <a href="/register" class="navi-link active" id="navi-link-0">
 													<span class="navi-icon">
 														<i class="la la-pen icon-xl"></i>
 													</span>
@@ -178,7 +178,7 @@
               </a>
             </li>
             <li class="navi-item">
-              <a href="#" class="navi-link">
+              <a href="#" class="navi-link" id="navi-link-1">
 													<span class="navi-icon">
 														<i class="la la-map-marked-alt icon-xl"></i>
 													</span>
@@ -187,11 +187,21 @@
               </a>
             </li>
             <li class="navi-item">
-              <a href="/search" class="navi-link">
+              <a href="/search" class="navi-link" id="navi-link-2">
 													<span class="navi-icon">
 														<i class="la la-search-plus icon-xl"></i>
 													</span>
                 <span class="navi-text">&nbsp;민원 상세 검색</span>
+              </a>
+            </li>
+            <div class="separator separator-dashed my-4"></div>
+            <li class="navi-header font-weight-bolder text-uppercase font-size-md pb-2">근무</li>
+            <li class="navi-item" data-toggle="modal" data-target="#staticBackdrop">
+              <a href="javascript:;" class="navi-link">
+													<span class="navi-icon">
+														<i class="la la-calendar icon-xl"></i>
+													</span>
+                <span class="navi-text">&nbsp;비상근무 편성</span>
               </a>
             </li>
             <div class="separator separator-dashed my-4"></div>
@@ -217,26 +227,26 @@
       <!--end::Create-->
 
       <!--begin::Create-->
-      <div class="topbar-item mr-4">
+      <div class="topbar-item">
 
         <!--begin::Toggle-->
         <button type="button"
-                class="btn font-weight-bolder btn-outline-primary btn-hover-primary dropdown-toggle"
-                id="dropdownMenuOffset" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                class="btn font-weight-bolder btn-text-dark"
+                data-toggle="dropdown" aria-haspopup="false" aria-expanded="false"
                 data-offset="0,5">
-          <span class="svg-icon svg-icon-md"><!--begin::Svg Icon | path:C:\wamp64\www\keenthemes\themes\metronic\theme\html\demo5\dist/../src/media/svg/icons\Layout\Layout-arrange.svg--><svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="24px" height="24px" viewBox="0 0 24 24" version="1.1">
-    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-        <rect x="0" y="0" width="24" height="24"/>
-        <path
-            d="M5.5,4 L9.5,4 C10.3284271,4 11,4.67157288 11,5.5 L11,6.5 C11,7.32842712 10.3284271,8 9.5,8 L5.5,8 C4.67157288,8 4,7.32842712 4,6.5 L4,5.5 C4,4.67157288 4.67157288,4 5.5,4 Z M14.5,16 L18.5,16 C19.3284271,16 20,16.6715729 20,17.5 L20,18.5 C20,19.3284271 19.3284271,20 18.5,20 L14.5,20 C13.6715729,20 13,19.3284271 13,18.5 L13,17.5 C13,16.6715729 13.6715729,16 14.5,16 Z"
-            fill="#000000"/>
-        <path
-            d="M5.5,10 L9.5,10 C10.3284271,10 11,10.6715729 11,11.5 L11,18.5 C11,19.3284271 10.3284271,20 9.5,20 L5.5,20 C4.67157288,20 4,19.3284271 4,18.5 L4,11.5 C4,10.6715729 4.67157288,10 5.5,10 Z M14.5,4 L18.5,4 C19.3284271,4 20,4.67157288 20,5.5 L20,12.5 C20,13.3284271 19.3284271,14 18.5,14 L14.5,14 C13.6715729,14 13,13.3284271 13,12.5 L13,5.5 C13,4.67157288 13.6715729,4 14.5,4 Z"
-            fill="#000000" opacity="0.3"/>
-    </g>
-</svg><!--end::Svg Icon--></span>
+          <!--          <span class="svg-icon svg-icon-md">&lt;!&ndash;begin::Svg Icon | path:C:\wamp64\www\keenthemes\themes\metronic\theme\html\demo5\dist/../src/media/svg/icons\Layout\Layout-arrange.svg&ndash;&gt;<svg-->
+          <!--              xmlns="http://www.w3.org/2000/svg"-->
+          <!--              width="24px" height="24px" viewBox="0 0 24 24" version="1.1">-->
+          <!--    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">-->
+          <!--        <rect x="0" y="0" width="24" height="24"/>-->
+          <!--        <path-->
+          <!--            d="M5.5,4 L9.5,4 C10.3284271,4 11,4.67157288 11,5.5 L11,6.5 C11,7.32842712 10.3284271,8 9.5,8 L5.5,8 C4.67157288,8 4,7.32842712 4,6.5 L4,5.5 C4,4.67157288 4.67157288,4 5.5,4 Z M14.5,16 L18.5,16 C19.3284271,16 20,16.6715729 20,17.5 L20,18.5 C20,19.3284271 19.3284271,20 18.5,20 L14.5,20 C13.6715729,20 13,19.3284271 13,18.5 L13,17.5 C13,16.6715729 13.6715729,16 14.5,16 Z"-->
+          <!--            fill="#000000"/>-->
+          <!--        <path-->
+          <!--            d="M5.5,10 L9.5,10 C10.3284271,10 11,10.6715729 11,11.5 L11,18.5 C11,19.3284271 10.3284271,20 9.5,20 L5.5,20 C4.67157288,20 4,19.3284271 4,18.5 L4,11.5 C4,10.6715729 4.67157288,10 5.5,10 Z M14.5,4 L18.5,4 C19.3284271,4 20,4.67157288 20,5.5 L20,12.5 C20,13.3284271 19.3284271,14 18.5,14 L14.5,14 C13.6715729,14 13,13.3284271 13,12.5 L13,5.5 C13,4.67157288 13.6715729,4 14.5,4 Z"-->
+          <!--            fill="#000000" opacity="0.3"/>-->
+          <!--    </g>-->
+          <!--</svg>&lt;!&ndash;end::Svg Icon&ndash;&gt;</span>-->
           블럭 보기
         </button>
 
@@ -249,6 +259,7 @@
 
           <!--begin::Navigation-->
           <ul class="navi navi-hover navi-active navi-accent py-5">
+            <li class="navi-header font-weight-bolder text-uppercase font-size-md pb-2">민원</li>
             <li class="navi-item">
               <div class="navi-link">
                 <span class="navi-text">&nbsp;대블럭</span>
@@ -289,8 +300,8 @@
       <!--end::Quick panel-->
 
       <!--begin::User-->
-      <div class="topbar-item mr-4">
-        <div class="btn btn-icon btn-sm btn-clean btn-text-dark-75" id="kt_quick_user_toggle">
+      <div class="topbar-item ml-4">
+        <div class="btn btn-icon btn-sm btn-circle btn-outline-dark" id="kt_quick_user_toggle">
 										<span class="svg-icon svg-icon-lg">
 
 											<!--begin::Svg Icon | path:assets/media/svg/icons/General/User.svg-->
