refactor: Setup server routes
Rename 'petition' to 'service'

--- a/views/partials/_content-service-register.html
+++ b/views/partials/_content-service-register.html
@@ -31,14 +31,14 @@
                 <div class="col-lg-4">
                   <label>접수번호:</label>
                   <div class="input-icon">
-                    <input type="text" class="form-control" placeholder="" disabled value="2020-002303"/>
+                    <input type="text" class="form-control" placeholder="" disabled/>
                     <span><i class="la la-info-circle"></i></span>
                   </div>
                 </div>
                 <div class="col-lg-4">
                   <label>접수자:</label>
                   <div class="input-icon">
-                    <input type="text" class="form-control" placeholder="" value="홍길동"/>
+                    <input type="text" class="form-control" placeholder=""/>
                     <span><i class="la la-user"></i></span>
                   </div>
                 </div>
@@ -59,14 +59,14 @@
                 <div class="col-lg-4">
                   <label>민원인:</label>
                   <div class="input-icon">
-                    <input type="text" class="form-control" placeholder="" value="김철수"/>
+                    <input type="text" class="form-control" placeholder=""/>
                     <span><i class="la la-user"></i></span>
                   </div>
                 </div>
                 <div class="col-lg-4">
                   <label>연락처:</label>
                   <div class="input-icon">
-                    <input type="text" class="form-control kt_inputmask_3" placeholder="" value="0543302203"/>
+                    <input type="text" class="form-control kt_inputmask_3" placeholder=""/>
                     <span><i class="la la-phone"></i></span>
                   </div>
                 </div>
@@ -109,7 +109,7 @@
                 </div>
                 <div class="col-lg-2">
                   <label>관경 (mm):</label>
-                  <input type="text" class="form-control" placeholder="" value="120"/>
+                  <input type="text" class="form-control" placeholder=""/>
                 </div>
                 <div class="col-lg-2">
                   <label>보수내용:</label>
@@ -153,7 +153,7 @@
                 <div class="col-lg-2">
                   <label>대표자:</label>
                   <div class="input-icon">
-                    <input type="text" class="form-control" placeholder="" disabled value="대표자"/>
+                    <input type="text" class="form-control" placeholder="" disabled/>
                     <span><i class="la la-user"></i></span>
                   </div>
                 </div>
@@ -161,7 +161,7 @@
                   <label>연락처:</label>
                   <div class="input-icon">
                     <input type="text" class="form-control form-control kt_inputmask_3" placeholder=""
-                           id="kt_inputmask_3" disabled value="0544030034"/>
+                           id="kt_inputmask_3" disabled/>
                     <span><i class="la la-phone"></i></span>
                   </div>
                 </div>
