--- a/views/partials/_header.html
+++ b/views/partials/_header.html
@@ -170,7 +170,7 @@
           <!--begin::Navigation-->
           <ul class="navi navi-hover navi-active navi-accent py-5">
             <li class="navi-item">
-              <a href="/register" class="navi-link active" id="navi-link-0">
+              <a href="/service/register" class="navi-link active" id="navi-link-0">
 													<span class="navi-icon">
 														<i class="la la-pen icon-xl"></i>
 													</span>
@@ -187,7 +187,7 @@
               </a>
             </li>
             <li class="navi-item">
-              <a href="/search" class="navi-link" id="navi-link-2">
+              <a href="service/search" class="navi-link" id="navi-link-2">
 													<span class="navi-icon">
 														<i class="la la-search-plus icon-xl"></i>
 													</span>
