feature: Initialize kakao map for export

--- a/views/index.html
+++ b/views/index.html
@@ -140,16 +140,8 @@
 
 <!--begin::Page Scripts(used by this page)-->
 <script src="assets/js/pages/widgets.js"></script>
-<script src="assets/js/pages/crud/datatables/data-sources/ajax-client-side-custom.js"></script>
+<script src="assets/js/maps.bundle.js"></script>
 <script>
-  var mapContainer = document.getElementById('map-kakao');
-  var mapOption = {
-    center: new kakao.maps.LatLng(36.828536, 128.625697),
-    level: 3,
-  };
-
-  var map = new kakao.maps.Map(mapContainer, mapOption);
-
   $('.navi-link').removeClass('active');
 </script>
 <!--end::Page Scripts-->
