--- a/views/partials/_content.html
+++ b/views/partials/_content.html
@@ -21,19 +21,19 @@
         z-index: 0;
       "
     ></div>
-<!--    <div-->
-<!--        id="map-openlayers"-->
-<!--        class="child"-->
-<!--        style="-->
-<!--        position: absolute;-->
-<!--        width: 100%;-->
-<!--        height: 100%;-->
-<!--        overflow: hidden;-->
-<!--        z-index: 1;-->
-<!--        background: transparent;-->
-<!--        touch-action: none;-->
-<!--      "-->
-<!--    ></div>-->
+    <div
+        id="map-openlayers"
+        class="child"
+        style="
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        z-index: 1;
+        background: transparent;
+        touch-action: none;
+      "
+    ></div>
     <div style="display: none;">
       <!-- Popup -->
       <a id="popup" data-toggle="kt-popover" data-trigger="focus"></a>
