style: Shift page header theme to dark & shrink height
Add new logo image for Yeongju
(http://www.yeongju.go.kr/open_content/main/page.do?mnu_uid=3743)

--- a/demo5/src/sass/layout/_variables.scss
+++ b/demo5/src/sass/layout/_variables.scss
@@ -35,17 +35,15 @@ $header-config: (
 	desktop: (
 		// Default Mode
 		default: (
-			//height: 80px,
-			height: 60px,
+			height: 50px,
 			bg-color: $white,
-			border: 1px solid $gray-200
+			border: 0px
 		),
 
 		// Fixed Mode
 		fixed: (
 			zindex: 97,
-			//height: 80px,
-			height: 60px,
+			height: 50px,
 			transition: all 0.3s ease
 		)
 	),
