--- a/demo5/src/sass/components/_variables.demo.scss
+++ b/demo5/src/sass/components/_variables.demo.scss
@@ -3,8 +3,8 @@
 //
 
 // Theme colors
-$primary:       									#3699FF;
-$primary-hover:    									#187DE4;
+$primary:       									#489EE2;
+$primary-hover:    									#0078D7;
 $primary-light:    									#E1F0FF;
 $primary-inverse:  									#FFFFFF;
 
