--- a/views/partials/_header.html
+++ b/views/partials/_header.html
@@ -9,45 +9,39 @@
 
       <!--begin::Aside Toggle-->
       <button class="btn btn-icon aside-toggle ml-n3 mr-10" id="kt_aside_desktop_toggle">
-									<span class="svg-icon svg-icon-xxl svg-icon-dark-75">
-
-										<!--begin::Svg Icon | path:assets/media/svg/icons/Text/Align-left.svg-->
-										<svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" viewBox="0 0 24 24"
-                         version="1.1">
-											<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-												<rect x="0" y="0" width="24" height="24"/>
-												<rect fill="#000000" opacity="0.3" x="4" y="5" width="16" height="2" rx="1"/>
-												<rect fill="#000000" opacity="0.3" x="4" y="13" width="16" height="2" rx="1"/>
-												<path
-                            d="M5,9 L13,9 C13.5522847,9 14,9.44771525 14,10 C14,10.5522847 13.5522847,11 13,11 L5,11 C4.44771525,11 4,10.5522847 4,10 C4,9.44771525 4.44771525,9 5,9 Z M5,17 L13,17 C13.5522847,17 14,17.4477153 14,18 C14,18.5522847 13.5522847,19 13,19 L5,19 C4.44771525,19 4,18.5522847 4,18 C4,17.4477153 4.44771525,17 5,17 Z"
-                            fill="#000000"/>
-											</g>
-										</svg>
-
-                    <!--end::Svg Icon-->
-									</span>
+        <span class="svg-icon svg-icon-white svg-icon-2x"><!--begin::Svg Icon | path:C:\wamp64\www\keenthemes\themes\metronic\theme\html\demo7\dist/../src/media/svg/icons\Text\Menu.svg--><svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24px" height="24px" viewBox="0 0 24 24" version="1.1">
+    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+        <rect x="0" y="0" width="24" height="24"/>
+        <rect fill="#000000" x="4" y="5" width="16" height="3" rx="1.5"/>
+        <path
+            d="M5.5,15 L18.5,15 C19.3284271,15 20,15.6715729 20,16.5 C20,17.3284271 19.3284271,18 18.5,18 L5.5,18 C4.67157288,18 4,17.3284271 4,16.5 C4,15.6715729 4.67157288,15 5.5,15 Z M5.5,10 L18.5,10 C19.3284271,10 20,10.6715729 20,11.5 C20,12.3284271 19.3284271,13 18.5,13 L5.5,13 C4.67157288,13 4,12.3284271 4,11.5 C4,10.6715729 4.67157288,10 5.5,10 Z"
+            fill="#000000" opacity="0.8"/>
+    </g>
+        </svg><!--end::Svg Icon--></span>
       </button>
 
       <!--end::Aside Toggle-->
 
       <!--begin::Logo-->
       <a href="">
-        <img alt="Logo" src="assets/media/logos/Untitled-2.png" class="logo-sticky max-h-35px"/>
+        <img alt="Logo" src="assets/media/logos/logo-yeongju-2.png" class="logo-sticky max-h-35px"/>
       </a>
 
       <!--end::Logo-->
 
       <!--begin::Desktop Search-->
-      <div class="quick-search quick-search-inline ml-15 w-300px" id="kt_quick_search_inline">
+      <div class="quick-search quick-search-inline ml-15 w-250px h-35px" id="kt_quick_search_inline">
 
         <!--begin::Form-->
         <form method="get" class="quick-search-form">
-          <div class="input-group rounded bg-white">
+          <div class="input-group rounded-sm bg-white">
             <div class="input-group-prepend">
 												<span class="input-group-text">
-													<span class="svg-icon svg-icon-lg">
+													<span class="svg-icon svg-icon-sm svg-icon-primary">
 
-														<!--begin::Svg Icon | path:assets/media/svg/icons/General/Search.svg-->
+                            <!--begin::Svg Icon | path:assets/media/svg/icons/General/Search.svg-->
 														<svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" viewBox="0 0 24 24"
                                  version="1.1">
 															<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -65,7 +59,7 @@
 													</span>
 												</span>
             </div>
-            <input type="text" class="form-control h-45px quick-search-inline" placeholder="검색어를 입력하세요..."/>
+            <input type="text" class="form-control h-35px quick-search-inline" placeholder="검색어를 입력하세요..."/>
             <div class="input-group-append">
 												<span class="input-group-text">
 													<i class="quick-search-close ki ki-close icon-sm text-muted"></i>
@@ -141,9 +135,9 @@
 
         <!--begin::Toggle-->
         <button type="button"
-                class="btn font-weight-bolder btn-text-dark"
+                class="btn font-weight-bolder btn-text-light"
                 data-toggle="dropdown" aria-haspopup="false" aria-expanded="false"
-                data-offset="0,5">
+                data-offset="0,7">
           <!--          <span class="svg-icon svg-icon-md">&lt;!&ndash;begin::Svg Icon | path:C:\wamp64\www\keenthemes\themes\metronic\theme\html\demo5\dist/../src/media/svg/icons\Communication\Active-call.svg&ndash;&gt;<svg-->
           <!--              xmlns="http://www.w3.org/2000/svg"-->
           <!--              width="24px" height="24px" viewBox="0 0 24 24" version="1.1">-->
@@ -231,9 +225,9 @@
 
         <!--begin::Toggle-->
         <button type="button"
-                class="btn font-weight-bolder btn-text-dark"
+                class="btn font-weight-bolder btn-text-light"
                 data-toggle="dropdown" aria-haspopup="false" aria-expanded="false"
-                data-offset="0,5">
+                data-offset="0,7">
           <!--          <span class="svg-icon svg-icon-md">&lt;!&ndash;begin::Svg Icon | path:C:\wamp64\www\keenthemes\themes\metronic\theme\html\demo5\dist/../src/media/svg/icons\Layout\Layout-arrange.svg&ndash;&gt;<svg-->
           <!--              xmlns="http://www.w3.org/2000/svg"-->
           <!--              width="24px" height="24px" viewBox="0 0 24 24" version="1.1">-->
@@ -300,27 +294,13 @@
       <!--end::Quick panel-->
 
       <!--begin::User-->
-      <div class="topbar-item ml-4">
-        <div class="btn btn-icon btn-sm btn-circle btn-outline-dark" id="kt_quick_user_toggle">
-										<span class="svg-icon svg-icon-lg">
-
-											<!--begin::Svg Icon | path:assets/media/svg/icons/General/User.svg-->
-											<svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" viewBox="0 0 24 24"
-                           version="1.1">
-												<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-													<polygon points="0 0 24 0 24 24 0 24"/>
-													<path
-                              d="M12,11 C9.790861,11 8,9.209139 8,7 C8,4.790861 9.790861,3 12,3 C14.209139,3 16,4.790861 16,7 C16,9.209139 14.209139,11 12,11 Z"
-                              fill="#000000" fill-rule="nonzero" opacity="0.3"/>
-													<path
-                              d="M3.00065168,20.1992055 C3.38825852,15.4265159 7.26191235,13 11.9833413,13 C16.7712164,13 20.7048837,15.2931929 20.9979143,20.2 C21.0095879,20.3954741 20.9979143,21 20.2466999,21 C16.541124,21 11.0347247,21 3.72750223,21 C3.47671215,21 2.97953825,20.45918 3.00065168,20.1992055 Z"
-                              fill="#000000" fill-rule="nonzero"/>
-												</g>
-											</svg>
-
-                      <!--end::Svg Icon-->
-										</span>
-        </div>
+      <div class="topbar-item">
+        <button type="button"
+                class="btn font-weight-bolder btn-text-light"
+                data-toggle="dropdown" aria-haspopup="false" aria-expanded="false"
+                data-offset="0,7">
+          사용자
+        </button>
       </div>
 
       <!--end::User-->
