feature: Change address popup overlay to Bootstrap Popover
Add .popover() function as a prototype to ol.Overlay
The 'data-trigger' and 'tabindex' html attributes give focus to the
popover when it's shown. This will allow user to dismiss this popover
element when user clicks outside the popover area.

https://getbootstrap.com/docs/4.5/components/popovers

--- a/views/partials/_content.html
+++ b/views/partials/_content.html
@@ -34,10 +34,7 @@
         touch-action: none;
       "
     ></div>
-    <div id="popup" class="ol-popup">
-      <a href="#" id="popup-closer" class="ol-popup-closer"></a>
-      <div id="popup-content"></div>
-    </div>
+    <div id="popup" data-trigger="focus" tabindex="0"></div>
   </div>
   <div id="rvWrapper" class="child">
     <div id="map-kakao-roadview" style="height: 100%;"></div>
