refactor: Remove blank line indents & wrap lines

--- a/views/partials/_content-service-register.html
+++ b/views/partials/_content-service-register.html
@@ -13,7 +13,8 @@
       </div>
       <div class="col-md-6">
         <!--begin::Card-->
-        <div class="card card-custom gutter-b example example-compact card-fit card-border card-stretch overlay" id="someHi">
+        <div class="card card-custom gutter-b example example-compact card-fit card-border card-stretch overlay"
+             id="someHi">
           <!--        <div class="card card-custom gutter-b example example-compact card-fit card-border card-stretch overlay overlay-block" id="someHi">-->
           <!--                      <div class="card-header">-->
           <!--                        <h3 class="card-title">3 Columns Form Layout</h3>-->
