--- a/views/partials/_header.html
+++ b/views/partials/_header.html
@@ -39,7 +39,8 @@
           <div class="input-group rounded-sm bg-white">
             <div class="input-group-prepend">
 												<span class="input-group-text">
-                            <a href="javascript:;" class="label label-lg label-primary label-inline font-weight-bolder mr-1"></a>
+                            <a href="javascript:;"
+                               class="label label-lg label-primary label-inline font-weight-bolder mr-1"></a>
 												</span>
             </div>
             <input type="text" class="form-control h-35px quick-search-inline" placeholder="검색어를 입력하세요..."/>
@@ -105,7 +106,8 @@
         <!--begin::Dropdown-->
         <div class="dropdown-menu p-0 m-0 dropdown-menu-right dropdown-menu-anim-up dropdown-menu-lg">
 
-          <!--[html-partial:include:{"file":"partials/_extras/dropdown/search-dropdown.html"}]/-->{{> _extras/dropdown/search-dropdown}}
+          <!--[html-partial:include:{"file":"partials/_extras/dropdown/search-dropdown.html"}]/-->{{>
+          _extras/dropdown/search-dropdown}}
         </div>
 
         <!--end::Dropdown-->
