--- a/views/service-search.html
+++ b/views/service-search.html
@@ -24,7 +24,8 @@
       <!--begin::Content-->
       <div class="content d-flex flex-column flex-column-fluid" id="kt_content">
 
-        <!--[html-partial:include:{"file":"partials/_subheader/subheader-v6.html"}]/-->{{> _subheader/_subheader-service-search}}
+        <!--[html-partial:include:{"file":"partials/_subheader/subheader-v6.html"}]/-->{{>
+        _subheader/_subheader-service-search}}
 
         <!--[html-partial:include:{"file":"partials/_content.html"}]/-->{{> _content-service-search}}
       </div>
