--- a/views/partials/_aside.html
+++ b/views/partials/_aside.html
@@ -5,7 +5,8 @@
   <div class="aside-menu-wrapper flex-column-fluid" id="kt_aside_menu_wrapper">
 
     <!--begin::Menu Container-->
-    <div id="kt_aside_menu" class="aside-menu min-h-lg-800px" data-menu-vertical="1" data-menu-scroll="1" data-menu-dropdown-timeout="500">
+    <div id="kt_aside_menu" class="aside-menu min-h-lg-800px" data-menu-vertical="1" data-menu-scroll="1"
+         data-menu-dropdown-timeout="500">
 
       <!--begin::Menu Nav-->
       <ul class="menu-nav">
