feature: Setup Naver Panorama(Roadview) in new roadview.js file
During panorama, openlayers map and Naver map should move in sync
(Openlayers map, view, Naver map are all required to run panorama)

navermaps.github.io/maps.js.ncp/docs/tutorial-9-panorama-map.example

--- a/views/partials/_content.html
+++ b/views/partials/_content.html
@@ -37,7 +37,7 @@
     <div id="popup" data-trigger="focus" tabindex="0"></div>
   </div>
   <div id="rvWrapper" class="child">
-    <div id="map-kakao-roadview" style="height: 100%;"></div>
+    <div id="map-roadview" style="height: 100%;"></div>
   </div>
 </div>
 
