--- a/views/partials/_header.html
+++ b/views/partials/_header.html
@@ -107,7 +107,7 @@
         <div class="dropdown-menu p-0 m-0 dropdown-menu-right dropdown-menu-anim-up dropdown-menu-lg">
 
           <!--[html-partial:include:{"file":"partials/_extras/dropdown/search-dropdown.html"}]/-->{{>
-          _extras/dropdown/search-dropdown}}
+        _extras/dropdown/search-dropdown}}
         </div>
 
         <!--end::Dropdown-->
@@ -120,7 +120,23 @@
 
         <!--begin::Toggle-->
         <button type="button"
-                class="btn font-weight-bolder btn-text-light"
+                class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary ml-2 px-2 py-2 font-size-lg"
+                id="btn-map-roadview"
+                data-offset="0,10">
+          로드뷰
+        </button>
+
+        <!--end::Toggle-->
+      </div>
+
+      <!--end::Create-->
+
+      <!--begin::Create-->
+      <div class="topbar-item">
+
+        <!--begin::Toggle-->
+        <button type="button"
+                class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary ml-2 px-2 py-2 font-size-lg"
                 data-toggle="dropdown" aria-haspopup="false" aria-expanded="false"
                 data-offset="0,10">
           <!--          <span class="svg-icon svg-icon-md">&lt;!&ndash;begin::Svg Icon | path:C:\wamp64\www\keenthemes\themes\metronic\theme\html\demo5\dist/../src/media/svg/icons\Communication\Active-call.svg&ndash;&gt;<svg-->
@@ -210,7 +226,7 @@
 
         <!--begin::Toggle-->
         <button type="button"
-                class="btn font-weight-bolder btn-text-light"
+                class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary ml-2 px-2 py-2 font-size-lg"
                 data-toggle="dropdown" aria-haspopup="false" aria-expanded="false"
                 data-offset="0,10">
           <!--          <span class="svg-icon svg-icon-md">&lt;!&ndash;begin::Svg Icon | path:C:\wamp64\www\keenthemes\themes\metronic\theme\html\demo5\dist/../src/media/svg/icons\Layout\Layout-arrange.svg&ndash;&gt;<svg-->
@@ -281,7 +297,7 @@
       <!--begin::User-->
       <div class="topbar-item">
         <button type="button"
-                class="btn font-weight-bolder btn-text-light"
+                class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary ml-2 px-2 py-2 font-size-lg"
                 data-toggle="dropdown" aria-haspopup="false" aria-expanded="false"
                 data-offset="0,10">
           사용자
