feature: Click header logo to move view to default location
Add Metronic tooltip message to logo and quick search toggle button

--- a/views/partials/_header.html
+++ b/views/partials/_header.html
@@ -25,7 +25,8 @@
       <!--end::Aside Toggle-->
 
       <!--begin::Logo-->
-      <a href="">
+      <a href="javascript:;" data-container="body" data-toggle="tooltip" data-placement="bottom" data-theme="dark"
+         id="topbar-logo" title="초기 위치로 이동합니다">
         <img alt="Logo" src="assets/media/logos/logo-yeongju-2.png" class="logo-sticky max-h-35px"/>
       </a>
 
@@ -40,7 +41,10 @@
             <div class="input-group-prepend">
 												<span class="input-group-text">
                             <a href="javascript:;"
-                               class="label label-lg label-primary label-inline font-weight-bolder mr-1"></a>
+                               class="label label-lg label-primary label-inline font-weight-bolder mr-1"
+                               data-container="body" data-toggle="tooltip" data-placement="bottom" data-theme="dark"
+                               title="시설물•주소를 검색합니다">
+                            </a>
 												</span>
             </div>
             <input type="text" class="form-control h-35px quick-search-inline" placeholder="검색어를 입력하세요..."/>
