feature: Control vector layer visibility in Metronic Aside menu
Click on the check/hide icon to toggle layer visibility
Use jquery's $(window).on('load', ...) to add visibility state icons

TODO:
Replace hard-coded string '영주' with respective company name
Refine layer label icon images

--- a/tools/webpack/webgis/maps/openlayers/openlayers.scss
+++ b/tools/webpack/webgis/maps/openlayers/openlayers.scss
@@ -5,3 +5,17 @@
 body {
   margin: 0;
 }
+
+.menu-item {
+  a.menu-link {
+    i.menu-bullet {
+      min-width: 2rem;
+      text-align: center;
+      display: block;
+      img {
+        max-height: 1.25rem;
+        min-height: 1rem;
+      }
+    }
+  }
+}
