--- a/tools/webpack/webgis/service/style.scss
+++ b/tools/webpack/webgis/service/style.scss
@@ -1,12 +1,12 @@
 .quick-search-form {
   .input-group-prepend {
     .label-primary::before {
-      content: '상수도';
+      content: '상수도 시설물';
     }
 
     // Reserved for SWL search
     //.label-danger::before {
-    //  content: '하수도';
+    //  content: '하수도 시설물';
     //}
 
     .label-info::before {
