refactor: Replace jquery with vanilla JS

--- a/views/partials/_aside.html
+++ b/views/partials/_aside.html
@@ -29,7 +29,7 @@
           <h4 class="menu-text">상수도</h4>
           <i class="menu-icon ki ki-bold-more-hor icon-md"></i>
         </li>
-        <li class="menu-item menu-item-submenu" aria-haspopup="true" data-menu-toggle="hover">
+        <li class="menu-item menu-item-submenu menu-item-wtl" aria-haspopup="true" data-menu-toggle="hover">
           <a href="javascript:;" class="menu-link menu-toggle">
 										<span class="svg-icon menu-icon"><!--begin::Svg Icon | path:C:\wamp64\www\keenthemes\themes\metronic\theme\html\demo5\dist/../src/media/svg/icons\Files\Group-folders.svg--><svg
                         xmlns="http://www.w3.org/2000/svg" width="24px"
@@ -189,7 +189,7 @@
             </ul>
           </div>
         </li>
-        <li class="menu-item menu-item-submenu" aria-haspopup="true" data-menu-toggle="hover">
+        <li class="menu-item menu-item-submenu menu-item-wtl" aria-haspopup="true" data-menu-toggle="hover">
           <a href="javascript:;" class="menu-link menu-toggle">
 										<span class="svg-icon menu-icon"><!--begin::Svg Icon | path:C:\wamp64\www\keenthemes\themes\metronic\theme\html\demo5\dist/../src/media/svg/icons\Files\Group-folders.svg--><svg
                         xmlns="http://www.w3.org/2000/svg" width="24px"
@@ -436,7 +436,7 @@
             </ul>
           </div>
         </li>
-        <li class="menu-item menu-item-submenu" aria-haspopup="true" data-menu-toggle="hover">
+        <li class="menu-item menu-item-submenu menu-item-wtl" aria-haspopup="true" data-menu-toggle="hover">
           <a href="javascript:;" class="menu-link menu-toggle">
 										<span class="svg-icon menu-icon"><!--begin::Svg Icon | path:C:\wamp64\www\keenthemes\themes\metronic\theme\html\demo5\dist/../src/media/svg/icons\Files\Group-folders.svg--><svg
                         xmlns="http://www.w3.org/2000/svg" width="24px"
