feature: Get waterline section list from server
Add waterline section selection toggle to page header element
Setup API routes
Remove serv.bundle.js and .css files and merge them into maps.bundle
(See initialize.js and webpack.config.js)

--- a/tools/webpack/webgis/maps/util/service.scss
+++ b/tools/webpack/webgis/maps/util/service.scss
@@ -14,3 +14,17 @@
     }
   }
 }
+
+.topbar-item {
+  .nav {
+    .topbar-item {
+      .dropdown-menu {
+        max-height: calc(75vh);
+        overflow-y: auto;
+        .navi .navi-item .navi-link .navi-text {
+          text-align: center;
+        }
+      }
+    }
+  }
+}
