--- a/views/partials/_header.html
+++ b/views/partials/_header.html
@@ -120,6 +120,65 @@
       <!--end::Tablet & Mobile Search-->
 
       <!--begin::Create-->
+      <div class="topbar-item" id="ol-water-section">
+
+        <div class="collapse nav justify-content-center" id="topbarToggle">
+          <div class="topbar-item" id="viw_wtl_wtsa_as">
+            <button type="button"
+                    class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary
+                    ml-1 px-2 py-2 font-size-lg"
+                    data-toggle="dropdown" aria-haspopup="false" aria-expanded="false"
+                    data-offset="0,10">
+              대블럭
+            </button>
+            <div class="dropdown-menu p-0 m-0 dropdown-menu-anim-up dropdown-menu-sm">
+            </div>
+          </div>
+          <div class="topbar-item" id="viw_wtl_wtssa_as">
+            <button type="button"
+                    class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary
+                    ml-1 px-2 py-2 font-size-lg section-button"
+                    data-toggle="dropdown" aria-haspopup="false" aria-expanded="false"
+                    data-offset="0,10">
+              중블럭
+            </button>
+            <div class="dropdown-menu p-0 m-0 dropdown-menu-anim-up dropdown-menu-sm">
+
+            </div>
+          </div>
+          <div class="topbar-item" id="viw_wtl_wtsba_as">
+            <button type="button"
+                    class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary
+                    ml-1 px-2 py-2 font-size-lg section-button"
+                    data-toggle="dropdown" aria-haspopup="false" aria-expanded="false"
+                    data-offset="0,10">
+              소블럭
+            </button>
+            <div class="dropdown-menu p-0 m-0 dropdown-menu-anim-up dropdown-menu-sm">
+
+            </div>
+          </div>
+        </div>
+
+        <!--begin::Toggle-->
+        <button type="button" id="section-toggle"
+                class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-success btn-hover-text-light
+                ml-2 px-2 py-2 font-size-lg"
+                data-toggle="collapse" data-target="#topbarToggle"
+                aria-haspopup="false" aria-expanded="false">
+          블럭
+        </button>
+
+        <!--end::Toggle-->
+      </div>
+
+      <!--end::Create-->
+
+      <div class="outer ml-4 mr-2">
+        <div class="inner"></div>
+      </div>
+
+      <!--begin::Create-->
       <div class="topbar-item">
 
         <!--begin::Toggle-->
@@ -242,69 +301,6 @@
       </div>
 
       <!--end::Create-->
-
-      <!--begin::Create-->
-      <div class="topbar-item">
-
-        <!--begin::Toggle-->
-        <button type="button"
-                class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary ml-2 px-2 py-2 font-size-lg"
-                data-toggle="dropdown" aria-haspopup="false" aria-expanded="false"
-                data-offset="0,10">
-          <!--          <span class="svg-icon svg-icon-md">&lt;!&ndash;begin::Svg Icon | path:C:\wamp64\www\keenthemes\themes\metronic\theme\html\demo5\dist/../src/media/svg/icons\Layout\Layout-arrange.svg&ndash;&gt;<svg-->
-          <!--              xmlns="http://www.w3.org/2000/svg"-->
-          <!--              width="24px" height="24px" viewBox="0 0 24 24" version="1.1">-->
-          <!--    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">-->
-          <!--        <rect x="0" y="0" width="24" height="24"/>-->
-          <!--        <path-->
-          <!--            d="M5.5,4 L9.5,4 C10.3284271,4 11,4.67157288 11,5.5 L11,6.5 C11,7.32842712 10.3284271,8 9.5,8 L5.5,8 C4.67157288,8 4,7.32842712 4,6.5 L4,5.5 C4,4.67157288 4.67157288,4 5.5,4 Z M14.5,16 L18.5,16 C19.3284271,16 20,16.6715729 20,17.5 L20,18.5 C20,19.3284271 19.3284271,20 18.5,20 L14.5,20 C13.6715729,20 13,19.3284271 13,18.5 L13,17.5 C13,16.6715729 13.6715729,16 14.5,16 Z"-->
-          <!--            fill="#000000"/>-->
-          <!--        <path-->
-          <!--            d="M5.5,10 L9.5,10 C10.3284271,10 11,10.6715729 11,11.5 L11,18.5 C11,19.3284271 10.3284271,20 9.5,20 L5.5,20 C4.67157288,20 4,19.3284271 4,18.5 L4,11.5 C4,10.6715729 4.67157288,10 5.5,10 Z M14.5,4 L18.5,4 C19.3284271,4 20,4.67157288 20,5.5 L20,12.5 C20,13.3284271 19.3284271,14 18.5,14 L14.5,14 C13.6715729,14 13,13.3284271 13,12.5 L13,5.5 C13,4.67157288 13.6715729,4 14.5,4 Z"-->
-          <!--            fill="#000000" opacity="0.3"/>-->
-          <!--    </g>-->
-          <!--</svg>&lt;!&ndash;end::Svg Icon&ndash;&gt;</span>-->
-          블럭 보기
-        </button>
-
-        <!--end::Toggle-->
-
-        <!--begin::Dropdown-->
-        <div class="dropdown-menu p-0 m-0 dropdown-menu-right dropdown-menu-anim-up dropdown-menu-sm">
-
-          <!--[html-partial:begin:{"id":"demo1/dist/inc/view/partials/content/dropdowns/dropdown-4","page":"index"}]/-->
-
-          <!--begin::Navigation-->
-          <ul class="navi navi-hover navi-active navi-accent py-5">
-            <li class="navi-header font-weight-bolder text-uppercase font-size-md pb-2">민원</li>
-            <li class="navi-item">
-              <div class="navi-link">
-                <span class="navi-text">&nbsp;대블럭</span>
-                <span class="navi-arrow"></span>
-              </div>
-            </li>
-            <li class="navi-item">
-              <div class="navi-link">
-                <span class="navi-text">&nbsp;중블럭</span>
-                <span class="navi-arrow"></span>
-              </div>
-            </li>
-            <li class="navi-item">
-              <div class="navi-link">
-                <span class="navi-text">&nbsp;소블럭</span>
-                <span class="navi-arrow"></span>
-              </div>
-            </li>
-            <div class="separator separator-dashed my-4"></div>
-          </ul>
-
-          <!--end::Navigation-->
-
-          <!--[html-partial:end:{"id":"demo1/dist/inc/view/partials/content/dropdowns/dropdown-4","page":"index"}]/-->
-        </div>
-
-        <!--end::Dropdown-->
-      </div>
 
       <!--end::Create-->
 
